--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <h1>Throw the Potato</h1>
   <p id="status">Connecting...</p>
+  <div id="lobby"></div>
   <button id="throwBtn">Throw Potato</button>
   <script src="client.js"></script>
 </body>
