--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,12 @@
 <html>
 <head>
   <title>Throw the Potato</title>
-  <style>
-    body { font-family: Arial; text-align: center; }
-    #game { display: none; }
-  </style>
 </head>
 <body>
 
-<h1>🥔 Throw The Potato</h1>
+<h1>Throw the Potato</h1>
+<div id="status">PAGE LOADED</div>
 
-<div id="lobby">
-  <h2>Lobby</h2>
-  <p id="lobbyStatus">Waiting...</p>
-</div>
-
-<div id="game">
-  <h2 id="gameStatus"></h2>
-</div>
-
-<script src="client.js"></script>
+<script src="/client.js"></script>
 </body>
 </html>
