--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Throw the Potato</title>
-</head>
 <body>
-
-<h1>Throw the Potato</h1>
-<div id="status">PAGE LOADED</div>
-
-<script src="/client.js"></script>
+  <h1>Throw the Potato</h1>
+  <h2 id="status">Loading...</h2>
+  <script src="/client.js"></script>
 </body>
 </html>
