--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,24 @@
 <html>
 <head>
   <title>Throw the Potato</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🥔 Throw the Potato</h1>
 
-  <div id="lobby">
-    <h2 id="lobbyText">Waiting...</h2>
-  </div>
+<h1>🥔 Throw the Potato</h1>
 
-  <div id="game" style="display:none">
-    <h2 id="gameText"></h2>
-    <button id="throwBtn" disabled>Throw Potato</button>
-  </div>
+<div id="lobby">
+  <h2 id="lobbyText">Waiting...</h2>
+</div>
 
-  <script src="client.js"></script>
+<div id="game" style="display:none">
+  <div id="potato">🥔</div>
+  <h2 id="gameText"></h2>
+  <div id="timer"></div>
+  <button id="throwBtn" disabled>Throw Potato</button>
+</div>
+
+<script src="client.js"></script>
 </body>
 </html>
