--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
   <title>Throw the Potato</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <h1>🥔 Throw the Potato</h1>
 
 <div id="lobby">
