--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <h1>🥔 Throw the Potato</h1>
 
 <div id="lobby">
@@ -13,6 +14,7 @@
 </div>
 
 <div id="game" style="display:none">
+  <div id="playersContainer"></div>
   <div id="potato">🥔</div>
   <h2 id="gameText"></h2>
   <div id="timer"></div>
