--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <h1>🥔 Throw the Potato</h1>
 
 <div id="lobby">
-  <h2 id="lobbyText">Waiting...</h2>
+  <h2 id="lobbyText">Waiting for players...</h2>
 </div>
 
 <div id="game" style="display:none">
