--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Throw the Potato</title>
+  <title>🥔 Throw the Potato</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🥔 Throw the Potato</h1>
 
-  <div id="lobby">
-    <h2 id="lobbyText">Waiting for players...</h2>
-  </div>
+<h1>🥔 Throw the Potato</h1>
 
-  <div id="game" style="display:none">
-    <div id="playersContainer"></div>
-    <div id="potato">🥔</div>
-    <h2 id="gameText"></h2>
-    <div id="timer"></div>
-    <button id="throwBtn" disabled>Throw Potato</button>
-  </div>
+<div id="lobby">
+  <h2 id="lobbyText">Waiting for players...</h2>
+</div>
 
-  <script src="client.js"></script>
+<div id="game" style="display:none">
+  <div id="playersContainer"></div>
+  <div id="potato">🥔</div>
+  <h2 id="gameText"></h2>
+  <div id="timer"></div>
+  <button id="throwBtn" disabled>Throw Potato</button>
+</div>
+
+<script src="client.js"></script>
 </body>
 </html>
