--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 <div id="game" hidden>
   <div id="arena">
-    <img id="potato" src="potato.png" />
+    <div id="potato">🥔</div>
   </div>
 
   <button id="throwBtn" disabled>Throw Potato</button>
