--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Throw the Potato</title>
-  <link rel="stylesheet" href="/style.css">
+<meta charset="UTF-8">
+<title>Throw the Potato</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
 <h1>🥔 Throw the Potato</h1>
 
-<div id="arena">
-  <div id="potato">🥔</div>
+<div id="lobby">
+  <p id="status">Waiting for players…</p>
+  <div id="hostControls" hidden>
+    <label>Players:
+      <select id="playerSelect">
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+      </select>
+    </label>
+    <button id="startBtn">Set Game</button>
+  </div>
 </div>
 
-<button id="throwBtn" disabled>Throw Potato</button>
+<div id="game" hidden>
+  <p id="holder">Potato is with: </p>
+  <div id="arena">
+    <div id="potato">🥔</div>
+  </div>
+  <p id="timer">Time: 30</p>
+  <button id="throwBtn" disabled>Throw Potato</button>
+</div>
+
+<audio id="incomingSound" src="incoming.wav" preload="auto"></audio>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/client.js"></script>
+<script src="client.js"></script>
 </body>
 </html>
