--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,12 @@
 
 <h1>🥔 Throw the Potato</h1>
 
-<div id="lobby">
+<div id="nameEntry">
+  <input type="text" id="nameInput" placeholder="Enter your name">
+  <button id="nameBtn">Join Lobby</button>
+</div>
+
+<div id="lobby" hidden>
   <p id="status">Waiting for players…</p>
   <div id="hostControls" hidden>
     <label>Players:
@@ -18,6 +23,22 @@
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18">18</option>
+        <option value="19">19</option>
+        <option value="20">20</option>
       </select>
     </label>
     <button id="startBtn">Set Game</button>
