--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Throw The Potato 🥔</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-
-  <!-- Socket.IO -->
-  <script src="/socket.io/socket.io.js"></script>
-
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Prevent iOS zoom -->
-  <style>
-    input, button, select {
-      font-size: 16px;
-    }
-  </style>
+  <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
 
   <!-- NAME ENTRY -->
   <div id="nameScreen">
     <h1>🥔 Throw The Potato</h1>
-    <p>Enter your name</p>
+    <p>Enter your name:</p>
     <input id="playerName" placeholder="Your name" />
-    <br /><br />
+    <br/><br/>
     <button id="saveName">Continue</button>
   </div>
 
   <!-- LOBBY -->
   <div id="lobbyScreen" style="display:none">
     <h2>Lobby</h2>
-
     <div id="hostControls">
       <label for="playerCount">Players:</label>
       <select id="playerCount">
@@ -50,28 +37,22 @@
         <option value="20">20</option>
       </select>
     </div>
-
-    <br />
+    <br/>
     <button id="joinLobby">Join Lobby</button>
-
     <p id="lobbyText"></p>
   </div>
 
   <!-- GAME -->
   <div id="gameScreen" style="display:none">
     <h2 id="status">Waiting…</h2>
-
     <div id="playersWrapper">
       <div id="players"></div>
       <div id="potato">🥔</div>
     </div>
-
     <button id="throwBtn" disabled>Throw Potato</button>
     <div id="timer"></div>
   </div>
 
-  <!-- Client -->
   <script src="client.js"></script>
-
 </body>
 </html>
