--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <!-- LOBBY -->
   <div id="lobbyScreen" style="display:none">
     <h2>Lobby</h2>
-    <div id="hostControls">
+    <div id="hostControls" style="display:none">
       <label for="playerCount">Players:</label>
       <select id="playerCount">
         <option value="2">2</option>
