--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,11 @@
     </div>
     <button id="throwBtn" disabled>Throw Potato</button>
     <div id="timer"></div>
+    <h3>Scoreboard</h3>
+    <ul id="scoreboard"></ul>
   </div>
+
+  <audio id="incomingSound" src="sounds/incoming.wav"></audio>
 
   <script src="client.js"></script>
 </body>
