--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       </select>
     </div>
     <br/>
-    <button id="joinLobby">Join Lobby</button>
+    <button id="joinLobby">Enter Salad Drawer</button>
     <p id="lobbyText"></p>
   </div>
 
